--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       >
       so that users can view and interact with that website.
     </p>
-    <img
-      src="images/html-css-javascript.png"
-      alt="images/html-css-javascript.png"
-      style="width: 100%; max-width: 600px"
+    <img src="./images/html-css-javascript.png" alt="javascript" style="width: 100%; max-width: 600px;">
     />
     <ul>
       <li>
